overflow scroll fix

--- a/css/sass/screen.sass
+++ b/css/sass/screen.sass
@@ -11,7 +11,16 @@ body
 	font-family: Arial, Helvetica, sans-serif
 	background: #e5e5e5
 
+#app-wrap
+	position: fixed
+	top: 0
+	left: 0
+
+	&.book
+		overflow: hidden
+
 	&.scroll
+		overflow: auto
 
 		#side-tabs
 			display: none !important
